--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class='span7 offset2'>
                     Feedback:
-                    <a href='https://github.com/psv/psv.github.io/issues/new'>Create a github issue</a>
+                    <a href='https://github.com/psv-format/psv-format.github.io/issues/new'>Create a github issue</a>
                     (free github account required) or
                     <a href='mailto:contact@briankhuu.org?subject=psv.io'>just send mail</a>
                 </div>
