--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,14 +9,15 @@
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <!-- Use title if it's in the page YAML frontmatter -->
     <title>psv — pipe separated value | {{ page.title }}</title>
+    <link href="/stylesheets/darkdown.css" rel="stylesheet" />
     <link href="/stylesheets/screen.css" rel="stylesheet" />
-    <link href="/stylesheets/custom.css" rel="stylesheet" />
+    <link href="/stylesheets/custom.css" rel="stylesheet">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
     <script src="/javascripts/all.js"></script>
     <script src="/javascripts/dev.js"></script>
 </head>
 
-<body class="dark-mode" data-bs-theme="dark">
+<body class="dark-mode markdown-body" data-bs-theme="dark">
     <!-- Apply dark-mode class by default -->
     <!--[if lt IE 7]> <p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Please upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p> <![endif]-->
     <div class='container'>
